# monk-mode-bot

./: .env.example  Cargo.toml  README.md
src/: main.rs
